--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- <p class="text-2xl font-bold text-gray-100">Eating nutritious food doesn't have to break the bank. With a little planning and smart shopping, you can enjoy delicious and wholesome meals without overspending.</p> -->
 			</div>
 			<div class="w-1/2 flex items-center justify-center">
-				<img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/e9/Eating_Steve.png/revision/latest?cb=20191113181054" class="w-fit h-full" />
+				<img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/e/e9/Eating_Steve.png/revision/latest" class="w-fit h-full" />
 			</div>
 		</div>
 		<div class="bg-slate-700 bg-opacity-75">
